--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,133 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: 'Reproducible Research: Peer Assessment 1'
+author: "Zoey Le"
+date: "February 4, 2018"
+output: html_document
+keep_md: true
 ---
+### Setup to show every code chunks
+```{r setup, include=TRUE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
+## Loading and preprocessing the data  
+Look at data summary and few first lines
 
-## Loading and preprocessing the data
-
-
-
+```{r loading}
+data=read.csv("activity.csv")
+data$date=as.Date(as.character(data$date))
+summary(data)
+head(data)
+```
 ## What is mean total number of steps taken per day?
 
+**1. Total steps taken on each day**
+```{r stepbyday}
+byStep=aggregate(data$steps,by=list(data$date),sum)
+names(byStep)=c("Date","TotalSteps")
+head(byStep)
+```
 
+**2. Histogram of the total number of steps taken each day**
+```{r histday}
+hist(byStep$TotalSteps,breaks = 25,col = "steelblue",border = "white",
+     main = "Total number of Steps per Day", xlab = "Total Steps",ylim = c(0,20))
+```
+
+**3. Mean and median of the total number of steps taken per day**
+
+```{r meanmedian}
+mean=round(mean(byStep$TotalSteps,na.rm=TRUE),2)
+median=round(median(byStep$TotalSteps,na.rm = TRUE),2)
+```
+
+- Mean of the total number of steps taken per day is: `r toString(mean)`
+- Median of the total number of steps taken per day is: `r toString(median)`
 
 ## What is the average daily activity pattern?
 
+**1. Time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)**
 
+```{r timeseries}
+byInterval=aggregate(na.omit(data)$steps,by=list(na.omit(data)$interval),mean)
+names(byInterval)=c("Interval","Mean.Steps")
+
+plot(x=byInterval$Interval,y=byInterval$Mean.Steps,type = "l",col =10,lwd=2,main ="Average of Steps accross all Days",xlab="Interval",ylab = "Step")
+```
+
+**2. The 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps**
+
+```{r max}
+byInterval[byInterval$Mean.Steps==max(byInterval$Mean.Steps),]
+```
 
 ## Imputing missing values
+**1. Total number of missing values in the dataset (i.e. the total number of rows with NAs)**
 
+```{r NAs}
+sapply(X=data,FUN = function(x) sum(is.na(x)))
+```
 
+**2. All the NAs will be replaced by the mean of steps taken on its interval**
+
+**3. New dataset that is equal to the original dataset but with the missing data filled in.**
+
+```{r completedata}
+ complete.data=data
+for (i in c(which(is.na(data$steps)))) {
+  complete.data$steps[i]=byInterval[which(byInterval$Interval==data$interval[i]),2]
+}
+ sapply(X=complete.data,FUN = function(x) sum(is.na(x)))
+```
+
+**4. Histogram of the total number of steps taken each day**
+
+```{r histnew}
+byStep.new=aggregate(complete.data$steps,by=list(complete.data$date),sum)
+names(byStep.new)=c("Date","TotalSteps")
+hist(byStep.new$TotalSteps,breaks = 25,col = "steelblue",border = "white",
+     main = "Total number of Steps per Day", xlab = "Total Steps",
+     ylim = c(0,20))
+```
+
+**5. Any differences in mean and median between original data and data with NAs replaced?**  
+
+Compare between histogram
+
+```{r newmeanmedian}
+newmean=round(mean(byStep.new$TotalSteps),2)
+newmedian=round(median(byStep.new$TotalSteps),2)
+par(mfrow=c(1,2))
+hist(byStep$TotalSteps,breaks = 25,col = "steelblue",border = "white",
+     main=NULL,xlab = "Total Steps per day before fill NAs",ylim = c(0,20))
+hist(byStep.new$TotalSteps,breaks = 25,col = "steelblue",border = "white",
+     main=NULL,xlab = "Total Steps per day after fill NAs",
+     ylim = c(0,20))
+```
+
+- New Mean of the total number of steps taken per day is: `r toString(newmean)`
+- New median of the total number of steps taken per day is: `r toString(newmedian)`
+- The mean between those two data is the same which is `r toString(mean)`. However, the median rise from `r toString(median)` to `r toString(newmedian)`
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+**1. New factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether a given date is a weekday or weekend day**
+
+```{r dataday}
+new.data=complete.data
+new.data$day.of.week=ifelse(weekdays(as.Date(new.data$date)) %in% c("Saturday","Sunday"),
+                     "weekend","weekday")
+new.data=aggregate(new.data$steps,by=list(new.data$interval,new.data$day.of.week),mean)
+names(new.data)=c("Interval","day.of.week","Mean.Steps")
+head(new.data)
+```
+
+**2. Panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis)**
+
+```{r timeseriesday}
+library(ggplot2)
+ggplot(new.data,aes(x=Interval,y=Mean.Steps,color=day.of.week))+
+  geom_line()+
+  facet_grid(day.of.week~.)+
+  labs(title="Means of Steps by Interval", x="Interval",y="Mean Steps")
+```
