--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,8 +2,9 @@
 title: 'Reproducible Research: Peer Assessment 1'
 author: "Zoey Le"
 date: "February 4, 2018"
-output: html_document
-keep_md: true
+output: 
+  html_document: 
+    keep_md: yes
 ---
 ### Setup to show every code chunks
 ```{r setup, include=TRUE}
